now onboarding new/approve request accept one param as json
Se quita parte de logica del controller y se lleva al service, se cambia el request para new y approve onboarding.